--- a/Prototype 1/views/Pages/executionWorkout.ejs
+++ b/Prototype 1/views/Pages/executionWorkout.ejs
@@ -375,23 +375,26 @@ h1 {
         headers: {
             'Content-Type': 'application/json',
         },
-        body: JSON.stringify({listeSerie})
+        body: JSON.stringify({ listeSerie })
     })
     .then(response => {
-        if (!response.ok) {
+        if (response.redirected) {
+            console.log('Redirected to:', response.url);
+            window.location.href = response.url;
+        } else if (!response.ok) {
             throw new Error('Network response was not ok: ' + response.statusText);
         }
-        return response.json();
+        return response.text();
     })
     .then(data => {
         console.log('Success:', data);
-        return data; 
     })
     .catch((error) => {
         console.error('Error:', error);
         throw error;
     });
-  }
+}
+
   document.addEventListener('DOMContentLoaded', function() {
     var startTime = Date.now();
     var timerElement = document.querySelector('.timer');
