Quick fixes to add a venir

--- a/Prototype 1/views/Pages/app.ejs
+++ b/Prototype 1/views/Pages/app.ejs
@@ -327,71 +327,71 @@
                 <div class="grid-item">
                     <!-- <img src="https://via.placeholder.com/200x200" alt="Placeholder Image">-->
                     <div class="card-content">
-                        <h3>Card 1</h3>
-                        <p>Description of Card 1</p>
+                        <h3>Push workout</h3>
+                        <p>À venir !</p>
                     </div>
                 </div>
                 <div class="grid-item">
                     <!--<img src="https://via.placeholder.com/200x200" alt="Placeholder Image">-->
                     <div class="card-content">
-                        <h3>Card 2</h3>
-                        <p>Description of Card 2</p>
+                        <h3>Pull workout</h3>
+                        <p>À venir !</p>
                     </div>
                 </div>
                 <div class="grid-item">
                     <!-- <img src="https://via.placeholder.com/200x200" alt="Placeholder Image">-->
                     <div class="card-content">
-                        <h3>Card 3</h3>
-                        <p>Description of Card 3</p>
+                        <h3>Legs workout</h3>
+                        <p>À venir !</p>
                     </div>
                 </div>
                 <div class="grid-item">
                     <!--   <img src="https://via.placeholder.com/200x200" alt="Placeholder Image">-->
                     <div class="card-content">
-                        <h3>Card 4</h3>
-                        <p>Description of Card 4</p>
+                        <h3>Fullbody workout 1</h3>
+                        <p>À venir !</p>
                     </div>
                 </div>
                 <div class="grid-item">
                     <!--   <img src="https://via.placeholder.com/200x200" alt="Placeholder Image">-->
                     <div class="card-content">
-                        <h3>Card 5</h3>
-                        <p>Description of Card 5</p>
+                        <h3>Fullbody workout 2</h3>
+                        <p>À venir !</p>
                     </div>
                 </div>
                 <div class="grid-item">
                     <!--   <img src="https://via.placeholder.com/200x200" alt="Placeholder Image">-->
                     <div class="card-content">
-                        <h3>Card 6</h3>
-                        <p>Description of Card 6</p>
+                        <h3>Full body workout 3</h3>
+                        <p>À venir !</p>
                     </div>
                 </div>
                 <div class="grid-item">
                     <!--  <img src="https://via.placeholder.com/200x200" alt="Placeholder Image">-->
                     <div class="card-content">
-                        <h3>Card 7</h3>
-                        <p>Description of Card 7</p>
+                        <h3>Abs et cardio</h3>
+                        <p>À venir !</p>
                     </div>
                 </div>
                 <div class="grid-item">
                     <!--  <img src="https://via.placeholder.com/200x200" alt="Placeholder Image">-->
                     <div class="card-content">
-                        <h3>Card 8</h3>
-                        <p>Description of Card 8</p>
+                        <h3>Power lifting workout 1</h3>
+                        <p>À venir !</p>
                     </div>
                 </div>
                 <div class="grid-item">
                     <!-- <img src="https://via.placeholder.com/200x200" alt="Placeholder Image">-->
                     <div class="card-content">
-                        <h3>Card 9</h3>
-                        <p>Description of Card 9</p>
+                        <h3>Power lifting workout 2</h3>
+                        <p>À venir !</p>
                     </div>
                 </div>
                 <div class="grid-item">
                     <!--  <img src="https://via.placeholder.com/200x200" alt="Placeholder Image">-->
                     <div class="card-content">
-                        <h3>Card 10</h3>
-                        <p>Description of Card 10</p>
+                        <h3>Power lifting workout 3</h3>
+                        <p>À venir !</p>
                     </div>
                 </div>
             </div>
@@ -761,10 +761,16 @@
                 border-top-right-radius: 0;
                 /* Annuler la courbure du coin supérieur droit */
             }
+            .titre-historique{
+                font-family: sans-serif;
+                color: white;
+                text-align: center;
+                margin-left:10%
+            }
         </style>
 
 
-
+        <h1 class="titre-historique">Historique de vos Entrainements</h1>
 
         <div class="month-navigation">
             <button class="prevMonth">&lt;</button>
